# tauri-rust-vue

./: .env.development  .env.production  .env.test  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
candle/: Cargo.toml
candle/src/: main.rs
entity/: Cargo.toml
entity/src/: dept.rs  menu.rs  mod.rs  prelude.rs  role.rs  user.rs
handle/: Cargo.toml
handle/src/: ConnectionHandle.rs  LogonHandle.rs  UserHandle.rs  lib.rs
handle/src/vo/: UserInfo.rs  mod.rs
migration/: README.md
migration/src/: m20220101_000001_create_table.rs
mio/: Cargo.toml
mio/src/: main.rs
src/: App.vue  App_v.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/handle/: LogonHandle.rs  mod.rs
src-tauri/src/vo/: result.rs
src/api/: tpi.ts
src/api/user/: index.ts
src/components/: CountTo.vue  FormDrawer.vue  index.ts
src/composables/: auth.ts  useManager.ts  useTabList.ts  util.ts
src/ipc/: tpi.ts
src/layouts/: admin.vue
src/layouts/components/: header.vue  menu.vue  tagList.vue
src/layouts/components/menu/: index.vue
src/layouts/components/menuItem/: index.vue
src/pages/: 404.vue  index.vue  login.vue
src/pages/acl/permission/: index.vue
src/pages/acl/role/: index.vue
src/pages/acl/user/: index.vue
src/pages/category/: list.vue
src/pages/goods/: list.vue
src/pages/product/attr/: index.vue
src/pages/product/sku/: index.vue
src/pages/product/spu/: index.vue
src/pages/product/tradmark/: index.vue
src/pages/screen/: index.vue
src/request/: index.ts
src/router/: index.ts  permission.ts  routes.ts
src/store/: asideWidth.ts  index.ts  userinfo.ts
src/type/: goods.ts  login.ts  result.ts  user.ts
src/views/: AboutView.vue  GoodsView.vue  HomeView.vue  Index.vue  LoginView.vue  UserView.vue
test_async/: Cargo.toml
test_async/src/: main.rs  timer_future.rs
test_cli/: Cargo.toml  juventus.csv
test_cli/src/: lib.rs  main.rs  opts.rs  process.rs
trpl/: Cargo.toml
trpl/src/: main.rs
type-build/: Cargo.toml
type-build/src/: lib.rs
type-build/type-macro/: Cargo.toml
type-build/type-macro/src/: lib.rs
web/: Cargo.toml  web.http
web/src/: lib.rs  main.rs  sqliteTest.rs
web/src/routes/: mod.rs
