[package]
name = "tauri-rust-vue"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_rust_vue_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#tokio = { version = "1", features = ["full"] }
handle = { path = "../handle" }
sea-orm = { version = "1.1.0"}
log = "0.4.22"
anyhow = {workspace = true}
