[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum="0.8.1"
#tokio = { version = "1", features = ["macros","rt-multi-thread"] }

tokio = { workspace = true, features = ["full"] }
#async-trait = "0.1"
#futures = { workspace = true }
#libp2p = { path = "../../libp2p", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
#tracing = { workspace = true }
#tracing-subscriber = { workspace = true, features = ["env-filter"] }